# cubinterpp

./: .gitignore  .pre-commit-config.yaml  .releaserc  404.html  CMakeLists.txt  LICENSE  README.md  create_single_header.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-test.yaml  docs.yaml  pull-request.yaml  push.yaml
cubinterp/: main.py
cubinterpp/: __init__.py  main.py  main_2d.py  periodic_spline.py  periodic_spline_2d.py
docs/: examples.md  index.md  introduction.md  requirements.md  usage.md
docs/reference/: index.md
docs/theory/: boundary_conditions.md  cubic.md  derivatives.md  index.md  linear.md
example/: main.py
examples/: index.html
include/: CMakeLists.txt  arrayn.hpp  cubic_interp.hpp  cubic_interp_1d.hpp  cubic_interp_2d.hpp  cubic_interp_3d.hpp  cubic_interp_impl.hpp  cubic_spline.hpp  cubic_splines_1d.hpp  cubic_splines_2d.hpp  cubic_splines_3d.hpp  cubinterpp.hpp  derivatives.hpp  linear_interp.hpp  linear_interp_impl.hpp  slopes.hpp  utils.hpp  vectorn.hpp
include/old/: cubic_interp_1d_spec.hpp  linear_interp_1d_spec.hpp
introduction/: index.html
javascripts/: mathjax.js
reference/: index.html
reference/annotated/: index.html
reference/class_member_enums/: index.html
reference/class_member_functions/: index.html
reference/class_member_typedefs/: index.html
reference/class_member_variables/: index.html
reference/class_members/: index.html
reference/classcip_1_1AkimaSpline1D/: index.html
reference/classcip_1_1AkimaSpline2D/: index.html
reference/classcip_1_1CubicCellND/: index.html
reference/classcip_1_1CubicCellND_3_01T_00_011_01_4/: index.html
reference/classcip_1_1CubicInterp/: index.html
reference/classcip_1_1CubicInterpND/: index.html
reference/classcip_1_1CubicInterpND_3_01T_00_011_00_01IM_01_4/: index.html
reference/classcip_1_1CubicInterpND_3_01T_00_011_01_4/: index.html
reference/classcip_1_1Indexer/: index.html
reference/classcip_1_1LinearCellND/: index.html
reference/classcip_1_1LinearCellND_3_01T_00_011_01_4/: index.html
reference/classcip_1_1LinearInterp/: index.html
reference/classcip_1_1LinearInterp1D/: index.html
reference/classcip_1_1LinearInterp2D/: index.html
reference/classcip_1_1LinearInterp3D/: index.html
reference/classcip_1_1LinearInterp4D/: index.html
reference/classcip_1_1LinearInterpND/: index.html
reference/classcip_1_1LinearInterpND_3_01T_00_011_00_01IM_01_4/: index.html
reference/classcip_1_1LinearInterpND_3_01T_00_011_01_4/: index.html
reference/classcip_1_1MakimaCubicInterp1D/: index.html
reference/classcip_1_1MakimaCubicInterp2D/: index.html
reference/classcip_1_1MonotonicCubicInterp1D/: index.html
reference/classcip_1_1MonotonicCubicInterp2D/: index.html
reference/classcip_1_1MonotonicSpline1D/: index.html
reference/classcip_1_1MonotonicSpline2D/: index.html
reference/classcip_1_1NaturalCubicInterp1D/: index.html
reference/classcip_1_1NaturalCubicInterp2D/: index.html
reference/classcip_1_1NaturalCubicInterp3D/: index.html
reference/classcip_1_1NaturalPeriodicCubicInterp1D/: index.html
reference/classcip_1_1NaturalPeriodicCubicInterp2D/: index.html
reference/classcip_1_1NaturalPeriodicSpline1D/: index.html
reference/classcip_1_1NaturalPeriodicSpline2D/: index.html
reference/classcip_1_1NaturalSpline1D/: index.html
reference/classcip_1_1NaturalSpline2D/: index.html
reference/classcip_1_1NaturalSpline3D/: index.html
reference/classcip_1_1VectorN/: index.html
reference/classes/: index.html
reference/cubic__interp_8hpp/: index.html
reference/cubic__interp_8hpp_source/: index.html
reference/cubic__interp__1d_8hpp/: index.html
reference/cubic__interp__1d_8hpp_source/: index.html
reference/cubic__interp__1d__spec_8hpp/: index.html
reference/cubic__interp__1d__spec_8hpp_source/: index.html
reference/cubic__interp__2d_8hpp/: index.html
reference/cubic__interp__2d_8hpp_source/: index.html
reference/cubic__interp__3d_8hpp/: index.html
reference/cubic__interp__3d_8hpp_source/: index.html
reference/cubic__interp__impl_8hpp/: index.html
reference/cubic__interp__impl_8hpp_source/: index.html
reference/cubic__spline_8hpp/: index.html
reference/cubic__spline_8hpp_source/: index.html
reference/cubic__splines__1d_8hpp/: index.html
reference/cubic__splines__1d_8hpp_source/: index.html
reference/cubic__splines__2d_8hpp/: index.html
reference/cubic__splines__2d_8hpp_source/: index.html
reference/cubic__splines__3d_8hpp/: index.html
reference/cubic__splines__3d_8hpp_source/: index.html
reference/cubinterpp_8hpp/: index.html
reference/cubinterpp_8hpp_source/: index.html
reference/cubinterpp__py__module_8cpp/: index.html
reference/cubinterpp__py__module_8cpp_source/: index.html
reference/derivatives_8hpp/: index.html
reference/derivatives_8hpp_source/: index.html
reference/dir_3ccffc210a036acba650f09ebe71329d/: index.html
reference/dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
reference/dir_d44c64559bbebec7f509842c48db8b23/: index.html
reference/files/: index.html
reference/functions/: index.html
reference/hierarchy/: index.html
reference/linear__interp_8hpp/: index.html
reference/linear__interp_8hpp_source/: index.html
reference/linear__interp__1d__spec_8hpp/: index.html
reference/linear__interp__1d__spec_8hpp_source/: index.html
reference/linear__interp__impl_8hpp/: index.html
requirements/: index.html
search/: search_index.json
src/: CMakeLists.txt  cubic_spline.cpp  cubic_spline.hpp  cubic_splines_1d.hpp  cubic_splines_2d.hpp  cubinterpp.cpp  cubinterpp_py_module.cpp  linear_interp.hpp  slopes.hpp  utils.hpp  vectorn.hpp
tests/: CMakeLists.txt  assertion_helpers.hpp  main.cpp  test_arrayn.cpp  test_cubic_cell_nd.cpp  test_cubic_interp_nd.cpp  test_cubic_spline.cpp  test_cubic_splines_1d.cpp  test_cubic_splines_2d.cpp  test_cubic_splines_3d.cpp  test_derivatives.cpp  test_linear_interp.cpp  test_utils.cpp  test_vectorn.cpp
tests/utils/: generate_test_data.py
theory/: index.html
usage/: index.html
(+203 files in other folders)
